# SmartWasteSorting

./: .gitignore  README.md
docs/: 00-tong-quan-du-an-va-ban-do-code.md  01-pipeline-du-lieu-va-manifest.md  02-discovery-embedding-clustering-va-cluster-review.md  03-huan-luyen-cnn-va-cau-hinh-theo-may.md  04-pseudo-label-onnx-artifact-va-luu-tru-cuc-bo.md  05-rust-server-api-fetch-va-giao-dien.md  06-toan-hoc-ml-dl-va-cong-thuc.md  07-workflow-thuc-chien-checklist-va-khac-phuc-su-co.md
interface/: next.config.ts  package.json  tsconfig.json
interface/app/: layout.tsx  page.tsx
localagent/: Cargo.toml  README.md  pyproject.toml
localagent/configs/: agent.example.toml
localagent/python/localagent/: __init__.py  workflow.py
localagent/python/localagent/api/: __init__.py  client.py
localagent/python/localagent/bridge/: __init__.py  _extension.py  rust_acceleration.py  rust_backend.py
localagent/python/localagent/config/: __init__.py  settings.py
localagent/python/localagent/data/: __init__.py  dataset.py  discovery.py  pipeline.py
localagent/python/localagent/domain/: __init__.py  types.py
localagent/python/localagent/inference/: pipeline.py
localagent/python/localagent/services/: __init__.py  orchestrator.py
localagent/python/localagent/training/: __init__.py  benchmarking.py  manifest_dataset.py  train.py  trainer.py
localagent/python/localagent/utils/: __init__.py  logging.py  progress.py
localagent/python/localagent/vision/: __init__.py  transforms.py
localagent/src/: artifacts.rs  cluster_review.rs  config.rs  domain.rs  error.rs  inference.rs  jobs.rs  lib.rs  python_api.rs  telemetry.rs  training_cache.rs  training_metrics.rs  workflow.rs
localagent/src/jobs/: commands.rs  io.rs  runtime.rs  tests.rs  types.rs
localagent/tests/: conftest.py  test_pipeline.py  test_settings.py  test_train_cli.py  test_training.py  test_training_artifacts.py  test_training_data.py  test_training_fit.py  test_training_pseudo_label.py  training_support.py
(+41 files in other folders)
