[package]
name = "localagent-rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "localagent_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "localagent-server"
path = "src/bin/server.rs"

[dependencies]
actix-web = "4.9"
actix-ws = "0.3"
futures-util = "0.3"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
pyo3 = { version = "0.22", features = ["abi3-py311", "extension-module"] }
ort = { version = "2.0.0-rc.9", features = ["load-dynamic"] }
image = "0.25"
indicatif = "0.17"
time = { version = "0.3", features = ["formatting"] }
